--- a/views/all_ideas.html
+++ b/views/all_ideas.html
@@ -1,7 +1,7 @@
 {% for idea in ideas %}
 
 <div class="idea">
-    <img src="{{idea.img}}" alt="Imagem de {{idea.title}}">
+    <img src="{{idea.image}}" alt="Imagem de {{idea.title}}">
 
     <div class="content">
         <h3>{{idea.title}}</h3>
@@ -9,7 +9,7 @@
         <div class="description">
             {{idea.description}}
         </div>
-        <a href="{{idea.url}}" target="_blank">Ir para a idéia</a>
+        <a href="{{idea.link}}" target="_blank">Ir para a idéia</a>
     </div>
 </div>
 
